metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item__c/Platinum_Offer_Item__c.object-meta.xml
<CustomObject>
    <description>Keeps platinum offer details for a product</description>
    <label>Platinum Offer Item</label>
    <nameField>
        <label>Platinum Offer Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platinum Offer Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>