metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LAMBDA-53172 Flag to check whether it is active or not</description>
    <inlineHelpText>Active flag for the product item</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>