metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item__c/fields/AI_Prompt__c.field-meta.xml
<CustomField>
    <fullName>AI_Prompt__c</fullName>
    <description>An extra field to be used in an AI prompt</description>
    <inlineHelpText>Value from this field can be used in an AI prompt template to customize it</inlineHelpText>
    <label>AI Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>