metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item__c/fields/Business_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Value__c</fullName>
    <description>LAMBDA-53172 business value that this item might provide</description>
    <inlineHelpText>Business value addition this item can provide</inlineHelpText>
    <label>Business Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>