metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>LAMBDA-53172 type of the category of the Platinum offering</description>
    <inlineHelpText>Category of the platinum offering</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Category</valueSetName>
    </valueSet>
</CustomField>