metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>LAMBDA-53172 Details of Platinum offer item</description>
    <inlineHelpText>Fill the details for Platinum offer item</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>