metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item__c/fields/Inactivated_On__c.field-meta.xml
<CustomField>
    <fullName>Inactivated_On__c</fullName>
    <description>This field captures the date on which the Platinum offer item was deactivated</description>
    <inlineHelpText>Set the date on which the Platinum Offer Item</inlineHelpText>
    <label>Inactivated On</label>
    <type>Date</type>
</CustomField>