metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item__c/fields/Probing_Questions__c.field-meta.xml
<CustomField>
    <fullName>Probing_Questions__c</fullName>
    <description>LAMBDA-53172 Questions the sales rep should ask customers to determine if the offer is a good fit</description>
    <inlineHelpText>Questions the sales rep should ask customers to determine if the offer is a good fit</inlineHelpText>
    <label>Probing Questions</label>
    <type>TextArea</type>
</CustomField>