metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <inlineHelpText>Product Family that this Platinum Offer Item is associated with.</inlineHelpText>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products_Families</valueSetName>
    </valueSet>
</CustomField>