metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>LAMBDA-53172 capture the details of the service</description>
    <inlineHelpText>Service offered by this item</inlineHelpText>
    <label>Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>