metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item__c/listViews/ACRM.listView-meta.xml
<ListView>
    <fullName>ACRM</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>ACRM</value>
    </filters>
    <label>ACRM</label>
</ListView>