metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item__c/listViews/DNN.listView-meta.xml
<ListView>
    <fullName>DNN</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>DNN</value>
    </filters>
    <label>DNN</label>
</ListView>