metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item__c/listViews/Kayako.listView-meta.xml
<ListView>
    <fullName>Kayako</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Kayako</value>
    </filters>
    <label>Kayako</label>
</ListView>