metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item__c/listViews/Scale_Arc.listView-meta.xml
<ListView>
    <fullName>Scale_Arc</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>ScaleArc</value>
    </filters>
    <label>ScaleArc</label>
</ListView>